--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,9 +1,5 @@
 <label>Server Name</label>
-<input 
-type="text" 
-class="form-control"
-(input)="onUpdateServerName($event)">
-<button class="btn btn-primary" 
-[disabled]="!allownewServer"
-(click)="onCreateServer()">Add Server</button>
+<!-- <input type="text" class="form-control" (input)="onUpdateServerName($event);"> TWO WAY BINDING-->
+<input type="text" class="form-control" [(ngModel)]="serverName">
+<button class="btn btn-primary" [disabled]="!allownewServer" (click)="onCreateServer()">Add Server</button>
 <p>{{serverCreationStatus}}</p>
