--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -2,4 +2,9 @@
 <!-- <input type="text" class="form-control" (input)="onUpdateServerName($event);"> TWO WAY BINDING-->
 <input type="text" class="form-control" [(ngModel)]="serverName">
 <button class="btn btn-primary" [disabled]="!allownewServer" (click)="onCreateServer()">Add Server</button>
-<p>{{serverCreationStatus}}</p>
+<p *ngIf="serverCreated">Server was created, server name is {{serverName}}</p>
+<!-- <ng-template #noServer>
+    <p>No Server was created</p>
+</ng-template> -->
+<!-- <p>{{serverCreationStatus}}</p> -->
+<app-server *ngFor="let server of servers"></app-server>
