--- a/src/app/directives/directives.component.html
+++ b/src/app/directives/directives.component.html
@@ -1,6 +1,6 @@
 <button class="btn btn-primary" (click)="showDetails()">Display Details</button>
 <p *ngIf="showPassword">Secret Password = Angular</p>
 
-<p *ngFor="let log of log" [ngStyle]="{backgroundColor: log >= 5 ? 'blue' : 'transpartent'}" [ngClass]="{'white-text': log >= 5}">
+<p *ngFor="let log of log; let i = index" [ngStyle]="{backgroundColor: i >= 5 ? 'blue' : 'transpartent'}" [ngClass]="{'white-text': i >= 5}">
     {{log}}
 </p>
